<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/characterFragment"
        android:icon="@drawable/ic_character"
        android:title="@string/nav_characters" />

    <item
        android:id="@+id/episodeFragment"
        android:icon="@drawable/ic_episode"
        android:title="@string/nav_episodes" />

    <item
        android:id="@+id/quoteFragment"
        android:icon="@drawable/ic_quote"
        android:title="@string/nav_quotes" />
</menu>