<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_mode"
        android:icon="@drawable/ic_night_mode"
        android:title="@string/mode_night"
        app:showAsAction="ifRoom" />
</menu>